--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
-body {
-  background-color: powderblue;
-  font-family: verdana;
-  font-size: 300%;
+html, body {
+  margin: 0;
+  padding: 0;
 }
-h1 {
-  color: blue;
-  font-family: verdana;
-  font-size: 300%;
+canvas {
+  display: block;
 }
